--- a/locale/zh/LC_MESSAGES/meerk40t.po
+++ b/locale/zh/LC_MESSAGES/meerk40t.po
@@ -10822,7 +10822,7 @@ msgid "Load"
 msgstr "加载"
 
 #: meerk40t/core/elements/element_treeops.py:1353
-msgid "Other/Blue/Red"
+msgid "Minimal"
 msgstr "其他/蓝色/红色"
 
 #: meerk40t/core/elements/element_treeops.py:1359
