--- a/locale/pt_BR/LC_MESSAGES/meerk40t.po
+++ b/locale/pt_BR/LC_MESSAGES/meerk40t.po
@@ -10837,7 +10837,7 @@ msgid "Load"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:1353
-msgid "Other/Blue/Red"
+msgid "Minimal"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:1359
