--- a/locale/es/LC_MESSAGES/meerk40t.po
+++ b/locale/es/LC_MESSAGES/meerk40t.po
@@ -10974,7 +10974,7 @@ msgid "X-Coordinate for placement to append?"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:1541
-msgid "Append Placement"
+msgid "Append absolute placement"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:1553
