--- a/locale/nl/LC_MESSAGES/meerk40t.po
+++ b/locale/nl/LC_MESSAGES/meerk40t.po
@@ -11075,7 +11075,7 @@ msgid "X-Coordinate for placement to append?"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:1541
-msgid "Append Placement"
+msgid "Append absolute placement"
 msgstr ""
 
 #: meerk40t/core/elements/element_treeops.py:1553
